first Lightcraft commit. Added video tutorials section.

--- a/create-usd/create-usd.mdx
+++ b/create-usd/create-usd.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Code Blocks'
-description: 'Display inline code and code blocks'
+title: 'Creating USDZ Files'
+description: 'Creating USD and USDZ files from 3D DCC tools'
 icon: 'code'
 ---
 
