added video tutorials, object locators

--- a/tutorials/introduction-to-jetset/introduction-jetset.mdx
+++ b/tutorials/introduction-to-jetset/introduction-jetset.mdx
@@ -1,16 +1,13 @@
 ---
 title: 'Introduction to Jetset'
 description: 'Introduction to the Jetset iOS app and overall operations'
-icon: 'text-size'
 ---
 
-## Descript Video
+## Video Tutorial
 
 <iframe src="https://share.descript.com/embed/P81fDyRM69o" width="640" height="360" frameborder="0" allowfullscreen></iframe>
 
-# Introduction to Jetset
-
-​
+# Transcription
 
 **Speaker:** We're going to go through a first pass of starting up Jetset and walking through the complete workflow so you can see exactly how all these different pieces work. Just started up the app, and we're at what's called the model pick page.
 
