added Blender tutorials and one Unreal tutorial.

--- a/jetset-config/create-project.mdx
+++ b/jetset-config/create-project.mdx
@@ -9,7 +9,7 @@ Access Jetset's Project panel from the gear menu -> Project.
 
 <img
   style={{ borderRadius: '0.5rem' }}
-  src="/images/jetset-project.JPG"
+  src="/images/jetset/jetset-project.JPG"
 />
 
 ## Project Location 
