--- a/setup/configuring-icloud.mdx
+++ b/setup/configuring-icloud.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Configuring iCloud'
-description: 'If you plan to use iCloud to store your takes, follow this configuration guide.'
+description: 'If you plan to use iCloud to store your takes, follow this configuration guide. Note that most production groups will not use iCloud, and will instead use the App Storage or User-Defined storage choices described in [Creating Jetset Projects](/setup/create-project).'
 ---
 
 ## Enable iCloud
