added take debugging.

--- a/equipment/iphone-hardware.mdx
+++ b/equipment/iphone-hardware.mdx
@@ -10,9 +10,9 @@ ARKit, the underlying real time tracking technology that Jetset uses to measure 
 The hardware capabilities largely break down into 3 ‘families’ of devices that can run Jetset:
 
 - iPhone XR/XS, iPhone 11 Pro — these phones work, but their lack of LiDAR sensor and low GPU memory means they have model limit sizes and can’t do the 3D scanning that is really critical for Jetset Cine.
-- iPhone 12/13/14 Pro — these phones have LiDAR which makes them a good fit for Cine. They can load mid sized models (150MB-250MB)
-- iPhone 15 Pro Max and iPad Pro — these devices have powerful GPUs and good cooling. They also mark the introduction of the USB-C port for power and data. This enables the use of a USB-C to Ethernet cable for data offtake, which is 10x faster than the previous Lightning to Ethernet adapter, and is 20x faster than wifi.
-- iPhone 16 Pro Max - the best device yet. Improved power, cooling, and tracking over the iPhone 15 Pro Max.
+- iPhone 12/13/14 Pro — these phones have LiDAR which makes them a good fit for Cine. They can load mid sized models (Max USDZ file size: 150MB-250MB)
+- iPhone 15 Pro Max and iPad Pro — these devices have powerful GPUs and good cooling. They also mark the introduction of the USB-C port for power and data. This enables the use of a USB-C to Ethernet cable for data offtake, which is 10x faster than the previous Lightning to Ethernet adapter, and is 20x faster than wifi. (Max USDZ file size: 300-500MB)
+- iPhone 16 Pro Max - the best device yet. Improved power, cooling, and tracking over the iPhone 15 Pro Max.(Max USDZ file size -- 400-600 MB)
 
 The differences come down to heat, LiDAR sensor presence/absence, and the size of 3D model that the GPU can render.
 
