--- a/setup/zoom-connection.mdx
+++ b/setup/zoom-connection.mdx
@@ -3,8 +3,6 @@ title: 'Zoom Connection'
 description: 'Jetset includes a direct Zoom integration that is accessed via a link sent to the Jetset user’s iOS device..'
 ---
 
-Jetset has a special link system that lets you embed Zoom call info and/or USDZ model info into a link or QR code that can be sent to users!
-
 ## Making Links
 
 To create a link, you can go to the [Jetset Link Generator](https://agog.com/test/) page.
@@ -23,7 +21,19 @@ To create a link that embeds a Zoom call connection, add the Zoom Meeting ID and
   src="/images/jetset/zoom_ID_pass.png"
 />
 
+
+### Zoom Meeting Details
+
+The first time the client opens a Jetset link with Zoom meeting parameters, a Share Screen button will appear on the main screen in the upper right. Clicking on the Share button will open a panel and join the client into the Zoom meeting.
+
+Clicking on the Broadcast button in the panel will start the screen share into the Zoom meeting.
+
+You can hide the Share button from the UI by opening the link  jetset:://unsharescreen.
+
+Jetset’s Zoom integration is video only; this is by design so that a user can link directly into a Zoom session right next to the Jetset camera without causing audio interference in the Zoom call.
+
 The passcode has to be the 6-7 digit number in the panel, as opposed to the encrypted value sent in a traditional Zoom link.
+
 
 ### Cloud File URL
 
@@ -31,11 +41,13 @@ The link can optionally contain the address to a USDZ file that can be accessed 
 
 Just paste the link into the Cloud File URL line, and enter the model file name that you wish the USDZ file to be saved as in the Jetset /models directory. (Optional -- if empty it will use the original model filename.)
 
+
 ### Generate Link
 
 Click 'Generate Link' to create a jetset:// link. This can be emailed or sent to other users, and clicking the link on their device will open up Jetset and enable the screen sharing system or automatically load the linked USDZ model.
 
 Note that some email systems like GMail won't correctly recognize these links. Fortunately, the Link Generator page can also create QR codes, which always work.
+
 
 ### Generate QR code
 
