Added anti glare cover.

--- a/setup/digital-slate.mdx
+++ b/setup/digital-slate.mdx
@@ -3,6 +3,12 @@ title: 'Digital Slate/Remote Control'
 description: 'Jetset has an integrated web server that enables external devices like laptops or tablets to work as a digital slate, tested with Chrome and Safari.'
 ---
 
+## Anti-Glare Covers
+
+Tablet and notebook screens are by default highly glossy, and reflect the environement. This can cause problems with the automatic ID marker detection in Autoshot.
+
+To prevent this, use a [standard anti-glare cover](/equipment/stage-checklist#matte-cover-for-ipad) applied to the screen.
+
 ## Connecting
 
 To connect, you can either manually enter the IP address of the Jetset device you’re connecting to, or click the Open Webpage button in Autoshot:
