--- a/setup/digital-slate.mdx
+++ b/setup/digital-slate.mdx
@@ -15,7 +15,7 @@ To connect, you can either manually enter the IP address of the Jetset device yo
 
 <img
   style={{ borderRadius: '0.5rem' }}
-  src="/images/jetset/AutoshotOpenWebpage.png"
+  src="/images/jetset/AutoshotOpenWebpage.PNG"
 />
 
 ## Displayed data
