Fixed png to PNG'

--- a/setup/digital-slate.mdx
+++ b/setup/digital-slate.mdx
@@ -46,14 +46,14 @@ The following data is displayed on the digital slate:
 
 <img
   style={{ borderRadius: '0.5rem' }}
-  src="/images/jetset/CustomData.png"
+  src="/images/jetset/CustomData.PNG"
 />
 
 The custom fields can be used to enter name and contact information on a per-take basis. For example, in the above case the director is named John, the DP is Ringo, and the note references support@lightcraft.pro.
 
 <img
   style={{ borderRadius: '0.5rem' }}
-  src="/images/jetset/TakeMetadataJSON.png"
+  src="/images/jetset/TakeMetadataJSON.PNG"
 />
 
 This data is stored in the {takeID}_zl_meta.json file located in the /Takes/Data/CamA/TRACKING directory.
