Added overrride, usdz pages.

--- a/create-usd/blender/object-locators.mdx
+++ b/create-usd/blender/object-locators.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Adding Object Locators in Blender'
+title: 'Object Locators'
 description: 'How to use object locators to specify objects in the scene that can be moved interactively in Jetset.'
 ---
 
