--- a/create-usd/blender/scene-locators.mdx
+++ b/create-usd/blender/scene-locators.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Adding Scene Locators in Blender'
+title: 'Scene Locators'
 description: 'How to use scene locators to specify shooting locations and virtual motion scales.'
 ---
 
