--- a/setup/digital-slate.mdx
+++ b/setup/digital-slate.mdx
@@ -42,7 +42,7 @@ The following data is displayed on the digital slate:
 - DATE: current shooting date
 - NOTE: space for user entered notes.
 
-## Data Embedding
+## Embedding Slate Data in Take JSON
 
 <img
   style={{ borderRadius: '0.5rem' }}
@@ -56,7 +56,7 @@ The custom fields can be used to enter name and contact information on a per-tak
   src="/images/jetset/TakeMetadataJSON.PNG"
 />
 
-This data is stored in the {takeID}_zl_meta.json file located in the /Takes/Data/CamA/TRACKING directory.
+This data is stored in the \{takeID}_zl_meta.json file located in the /Takes/Data/CamA/TRACKING directory.
 
 The JSON line of data for this take then includes these fields:
 
