Added object locator recognition and floor marker info.

--- a/create-usd/blender/object-locators.mdx
+++ b/create-usd/blender/object-locators.mdx
@@ -54,3 +54,11 @@ Tap the Z icon to interactively move the object up or down.
 Click OK when done moving the objects to return to the main screen.
 
 Object locator positions are stored on a per-take basis in the take metadata, and can be viewed with the 'i' button in Autoshot next to the currently selected take.
+
+### Optical Origin Marker Detection
+
+While in the Object panel, if Jetset sees one of the [Lightcraft origin markers](https://docs.lightcraft.pro/equipment/stage-checklist#vertical-origin-target-stand), the 'Align to Marker' button will light up.
+
+If the user taps that button, the currently selected Object Locator will align to the optical marker at its origin.
+
+This is particularly useful for rapidly locating CG characters and objects within a scene.
