--- a/equipment/stage-checklist.mdx
+++ b/equipment/stage-checklist.mdx
@@ -75,6 +75,17 @@ This stand is lightweight and clamps the new 18″x24″ vertical origin optical
 
 Use this with the new remote control origin setting tools in the Jetset digital slate/remote browser control web page.
 
+### Lightcraft Optical Origin Markers
+
+<img
+  style={{ borderRadius: '0.5rem' }}
+  src="/images/jetset/GreenFloorOrigin18x24.JPG"
+/>
+
+Lightcraft optical origin markers are shown in the [Introduction to Jetset](https://docs.lightcraft.pro/tutorials/jetset/introduction-jetset) tutorial, and are available on the [Downloads](https://lightcraft.pro/downloads/) page.
+
+There are 2 sizes: letter and 16x24. These correspond to sizes that can be easily printed or ordered on Canva.com.
+
 ### Digital Green/Blue
 
 <img
