--- a/setup/zoom-connection.mdx
+++ b/setup/zoom-connection.mdx
@@ -5,7 +5,7 @@ description: 'Jetset includes a direct Zoom integration that is accessed via a l
 
 ## Making Links
 
-To create a link, you can go to the [Jetset Link Generator](https://agog.com/test/) page.
+To create a link, you can go to the [Jetset Link Generator](https://lightcraft.pro/jetset-link-generator) page.
 
 <img
   style={{ borderRadius: '0.5rem' }}
