Added Megascans importer download link.

--- a/tutorials/blender-workflows/import-megascans-blender.mdx
+++ b/tutorials/blender-workflows/import-megascans-blender.mdx
@@ -7,6 +7,10 @@ description: 'Megascans are a set of high quality free and photorealistic scanne
 
 <iframe src="https://share.descript.com/embed/nhBm4loezId" width="640" height="360" frameborder="0" allowfullscreen></iframe>
 
+## Download the importer
+
+[Megascans Importer Releases](https://github.com/LightcraftTechnology/Batch-Import-BlenderAssets/releases/tag/v0.0.4)
+
 # Transcription
 
 We are going to go through a quick script today that does a neat job of doing batch import of Megascans FAB assets into Blender. And normally those are a little bit tricky. You can download in FBX, but it's hard to get it in. So we made a script that automates it. So this way you can go into your Blender Asset Manager and drag and, just drag and drop things in.
