Added production checklist

--- a/faq/faq.mdx
+++ b/faq/faq.mdx
@@ -1,1 +1,8 @@
+---
+title: 'Frequently Asked Questions'
+description: 'Check these frequently-asked questions first!'
+---
 
+## Help System
+
+[Lightcraft's Documentation](https://docs.lightcraft.pro/) is powered by Claude.ai! You can ask natural language questions in the 'Search' bar, and you'll get real answers trained on all of Lightcraft's tutorials!
