Added C-Tracking note to Aximmetry.

--- a/tutorials/jetset-cine/aximmetry-setup.mdx
+++ b/tutorials/jetset-cine/aximmetry-setup.mdx
@@ -3,6 +3,10 @@ title: 'Aximmetry Setup'
 description: 'Aximmetry provides a high quality, real time software keyer that integrates with Unreal for a complete compositing solution. This temporary tutorial will be updated later but will get people started.'
 ---
 
+## Updated C-Tracking name
+
+Aximmetry just renamed AGTP to 'C-Tracking', or a 'Comprehensive Tracking Protocol,' so in newer versions of Aximmetry (version 5.5+) please select C-Tracking instead of AGTP!
+
 ## Video Tutorial
 
 <iframe src="https://share.descript.com/embed/Y23lrz3Lbec" width="640" height="360" frameborder="0" allowfullscreen></iframe>
